--- a/src/app/components/roulette/roulette.component.html
+++ b/src/app/components/roulette/roulette.component.html
@@ -6,7 +6,7 @@
         [(ngModel)]="newOption"
         type="text"
         placeholder="Añade reto.."
-        (keyup.enter)="addOption()"
+        (keydown.enter)="addOption()"
         class="w-full"
       />
     </div>
