--- a/src/app/components/roulette/roulette.component.html
+++ b/src/app/components/roulette/roulette.component.html
@@ -1,21 +1,28 @@
-<div class="container">
-  <div class="flex justify-content-center flex-wrap">
-    <div class="flex align-items-center justify-content-center m-2">
-      <input
-        pInputText
-        [(ngModel)]="newOption"
-        type="text"
-        placeholder="Añade reto.."
-        (keydown.enter)="addOption()"
-        class="w-full"
-      />
-    </div>
-    <div class="flex align-items-center justify-content-center m-2">
-      <p-button (click)="spin()" class="flex-1 m-2">Girar</p-button>
+<div class="grid">
+  <div class="col-12 md:col-12 lg:col-12">
+    <div class="text-center p-3">
+      <div class="container">
+        <div class="flex justify-content-center flex-wrap">
+          <div class="flex align-items-center justify-content-center m-2">
+            <input
+              pInputText
+              [(ngModel)]="newOption"
+              type="text"
+              placeholder="Añade reto.."
+              (keydown.enter)="addOption()"
+              class="w-full"
+            />
+          </div>
+          <div class="flex align-items-center justify-content-center m-2">
+            <p-button (click)="spin()" class="flex-1 m-2">Girar</p-button>
+          </div>
+        </div>
+
+        <div class="flex justify-content-center flex-wrap">
+          <canvas #canvas class="roulette-canvas"></canvas>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="flex justify-content-center flex-wrap">
-      <canvas #canvas class="roulette-canvas"></canvas>
-  </div>
 </div>
